kube/deploy/core/db/mosquitto/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "apps-to-mosquitto"
spec:
  endpointSelector:
    matchLabels:
      db.home.arpa/mqtt: "allow"
  egress:
    - toEndpoints: &mosquitto
        - matchLabels:
            io.kubernetes.pod.namespace: mosquitto
            app.kubernetes.io/name: mosquitto
      toPorts:
        - ports:
            - port: "8883"
              protocol: TCP
    - toEndpoints: *mosquitto
      icmps: [{}]
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app mosquitto
  namespace: *app
spec:
  endpointSelector: &cluster
    matchLabels:
      app.kubernetes.io/name: mosquitto
  ingress:
    # same mosquitto cluster
    - fromEndpoints: [*cluster]
    # labelled pods
    - fromEndpoints: &labelled
        - matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
            - key: db.home.arpa/mqtt
              operator: In
              values: [allow]
      toPorts: &ports
        - ports:
            - port: "8883"
              protocol: TCP
    - fromEndpoints: *labelled
      icmps: [{}]
    # Valetudo
    - fromCIDRSet:
        - cidr: "${IP_ROBOROCK}/32"
      toPorts: *ports
  egress:
    # same cluster
    - toEndpoints: [*cluster]
